added lua to the build, as a static lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.19)
 project(retrodl8)
 
 set(CMAKE_CXX_STANDARD 14)
-include_directories(libs/lua)
-include_directories(libs/glm)
+include_directories(thirdparty/lua)
+include_directories(thirdparty/glm)
 option(RETRODL8_UNITY_TESTS "Start unity tests" OFF )
 set(JANSSON_BUILD_DOCS OFF CACHE BOOL "do not build documentation for JANSSON" FORCE)
 set(RETRODL8_UNITY_TESTS ON)
@@ -19,7 +19,7 @@ set(SOURCE
 add_executable(${PROJECT_NAME} ${SOURCE})
 add_subdirectory(thirdparty/jansson)
 add_subdirectory(thirdparty/doctest)
-#include_directories(thirdparty/doctest/doctest)
+add_subdirectory(thirdparty/lua)
 
 target_link_libraries(${PROJECT_NAME} jansson)
 target_link_libraries(${PROJECT_NAME} lua )
