added glm as a submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,20 +17,22 @@ set(SOURCE
         src/main.cpp
         )
 add_executable(${PROJECT_NAME} ${SOURCE})
-add_subdirectory(thirdparty/jansson)
-add_subdirectory(thirdparty/doctest)
-add_subdirectory(thirdparty/lua)
-add_subdirectory(thirdparty/glm)
 
-find_package(glm REQUIRED)
-target_link_libraries(${PROJECT_NAME} jansson)
-target_link_libraries(${PROJECT_NAME} lua )
-target_link_libraries(${PROJECT_NAME} glm )
-target_link_libraries(${PROJECT_NAME} SDL2)
-target_link_libraries(${PROJECT_NAME} SDL2_image)
-target_link_libraries(${PROJECT_NAME} SDL2_ttf)
-target_link_libraries(${PROJECT_NAME} SDL2_mixer)
-target_link_libraries(${PROJECT_NAME} doctest)
+
+add_subdirectory(thirdparty/jansson EXCLUDE_FROM_ALL)
+target_link_libraries(${PROJECT_NAME} PRIVATE jansson)
+
+add_subdirectory(thirdparty/lua EXCLUDE_FROM_ALL)
+target_link_libraries(${PROJECT_NAME} PRIVATE lua )
+target_link_libraries(${PROJECT_NAME} PRIVATE SDL2)
+target_link_libraries(${PROJECT_NAME} PRIVATE SDL2_image)
+target_link_libraries(${PROJECT_NAME} PRIVATE SDL2_ttf)
+target_link_libraries(${PROJECT_NAME} PRIVATE SDL2_mixer)
+add_subdirectory(thirdparty/doctest EXCLUDE_FROM_ALL)
+target_link_libraries(${PROJECT_NAME} PRIVATE doctest)
+add_subdirectory(thirdparty/glm EXCLUDE_FROM_ALL)
+include_directories(thirdparty/glm/glm)
+target_link_libraries(${PROJECT_NAME} PRIVATE glm )
 
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
                         COMMAND ${CMAKE_COMMAND} -E copy_directory
